# invisible-watermarker

./: LICENSE  README.md
lib/python/: pyproject.toml
lib/python/benchmark/: benchmark.py
lib/python/native/: concurrent.py
lib/python/rate_limit/: rate_limit.py
lib/python/watermark/encoder/: test_watermark_encoder.py  watermark_encoder.py
lib/python/watermark/max_dct/: max_dct_encoder.py
src/watermark/: apply_watermark.py  test_apply_watermark.py
src/watermark/chroma_subsample/: subsample.py
src/watermark/color_conversion/: color_conversion.py  test_color_conversion.py
src/watermark/max_dct/: max_dct_encoder.py  test_max_dct_encoder.py
